--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 
     // Room persistence stuff.
     def room_version = "1.1.1"
-    implementation "android.arch.persistence.room:runtime:$room_version"
+    api "android.arch.persistence.room:runtime:$room_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     testImplementation "android.arch.persistence.room:testing:$room_version"
 }
